--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/global/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/global/add.html
@@ -74,6 +74,7 @@
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
     var form = layui.form();
