--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/logLoginList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/logLoginList.html
@@ -46,10 +46,10 @@
 					<thead>
 						<tr>
 							<th width="40px">#</th>
+							<th width="40px">结果</th>
 							<th width="120px">用户</th>
 							<th width="120px">ip</th>
 							<th width="200px">登录地址</th>
-							<th>操作信息</th>
 							<th width="150px">操作时间</th>
 						</tr>
 					</thead>
@@ -59,10 +59,10 @@
 						</tr>
 						<tr th:each="login,itemStat:${loginList.records}">
 							<td th:text="${loginList.pageSize*(loginList.page-1)+itemStat.index+1}" style="text-align: center;"></td>
+							<td style="text-align: center;"><label th:if="${login.success==1}">成功</label><label th:if="${login.success==2}">失败</label></td>
 							<td th:text="${login.username}" style="text-align: center;"></td>
 							<td th:text="${login.ipAddress}" style="text-align: center;"></td>
 							<td th:text="${login.ipLoc}" style="text-align: center;"></td>
-							<td th:text="${login.message}"></td>
 							<td th:text="${login.eventDate}==null?'':${#dates.format(login.eventDate,'yyyy-MM-dd HH:mm:ss')}" style="text-align: center;"></td>
 						</tr>
 					</tbody>
