--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/list.html
@@ -1,171 +1,119 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-图灵谷-站点管理-栏目管理|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/treeview//bootstrap-treeview.css}" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/treeTable/themes/vsStyle/treeTable.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/tgCube/css/libs/datepicker.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/webuploader/webuploader.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=site,current=node)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=站点管理,current=栏目管理)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-2">
-								<a th:href="@{/admin/m/base/node/add_0.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-							</div>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th width="60" class="text-center">#</th>
-									<th>栏目名称</th>
-									<th>状态</th>
-									<th>栏目代码</th>
-									<th>栏目模板</th>
-									<th>文档模板</th>
-									<th class="text-center">是否隐藏</th>
-									<th class="text-center">真实栏目</th>
-									<th class="text-center">排序</th>
-									<th width="180" class="text-center">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=site,child=node)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>站点管理</cite></a> <a href="#">栏目管理</a> <a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 栏目管理
+				</blockquote>
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/m/base/node/add_0.gsp}" class="layui-btn">新增</a>
+						</div>
+					</div>
+				</blockquote>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th style="width: 40px;">#</th>
+							<th>栏目名称</th>
+							<th style="width: 60px;">状态</th>
+							<th>栏目代码</th>
+							<th>栏目模板</th>
+							<th>文档模板</th>
+							<th>是否隐藏</th>
+							<th>真实栏目</th>
+							<th>排序</th>
+							<th style="width: 200px;">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${nodeList == null or nodeList.size() == 0}">
+							<td colspan="6" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,itemStat:${nodeList}">
+							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
+							<td th:text="${item.noddName}" style="text-align: center;"></td>
+							<td class="layui-form"><input lay-filter="filter" th:id="${item.id}" lay-skin="switch" type="checkbox" th:attr="checked=${item.enabled ==1}"></td>
+							<td th:text="${item.codeNum}"></td>
+							<td th:text="${item.nodeTemplate}" style="text-align: center;"></td>
+							<td th:text="${item.infoTemplate}"></td>
+							<td style="text-align: center;"><label th:if="${item.hidden==1}">是</label><label th:if="${item.hidden==2}">否</label></td>
+							<td style="text-align: center;"><label th:if="${item.realNode==1}">是</label><label th:if="${item.realNode==2}">否</label></td>
+							<td th:text="${item.sortOrder}" style="text-align: center;"></td>
+							<td><a th:href="|@{/admin/m/base/node/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:href="|@{/admin/m/base/node/add_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon">新增子栏目</i></a> <a
+								th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/bootstrap-datepicker.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/treeview/bootstrap-treeview.js}"></script>
-<script th:src="@{/resources/vendor/treeTable/jquery.treeTable.min.js}"></script>
-<!-- ueditor -->
-<script th:src="@{/resources/vendor/ueditor/ueditor.config.js}"></script>
-<script th:src="@{/resources/vendor/ueditor/ueditor.all.min.js}"></script>
-<!--/* web uploader */-->
-<script th:src="@{/resources/vendor/webuploader/webuploader.js}"></script>
-<script th:src="@{/resources/js/common/formBuilder.js}"></script>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null,
-        "class" : "text-center"
-    }, {
-        "data" : "noddName"
-    }, {
-        "data" : "enabled",
-        render : function(data, type, row, meta) {
-            if (data == 1) {
-                return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" checked="checked" onchange="myTable.changeEnabled(this,' + "\'" + row.id + "\'" + ')" /> ';
-            } else {
-                return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" onchange="myTable.changeEnabled(this, ' + "\'" + row.id + "\'" + ')" />';
-            }
-        }
-    }, {
-        "data" : "codeNum"
-    }, {
-        "data" : "nodeTemplate"
-    }, {
-        "data" : "infoTemplate"
-    }, {
-        "data" : "hidden",
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<span class="text-success">是</span>';
-            } else {
-                return '<span class="text-danger">否</span>';
-            }
-        }
-    }, {
-        "data" : "realNode",
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<span class="text-success">是</span>';
-            } else {
-                return '<span class="text-danger">否</span>';
-            }
-        }
-    }, {
-        "data" : "sortOrder"
-    }, {
-        "data" : null,
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var addUrl = /*[[@{/admin/m/base/node/add_{id}.gsp}]]*/'url';
-            var result = '';
-            //修改按钮
-            result += ' <a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-            result += ' <a href="' + addUrl.replace("{id}", row.id) + '" data-target="#commonWin" class="btn btn-info btn-xs" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增子栏目</a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/node/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/base/node/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/base/node/delete_}]]*/'url',
-        enableUrl : /*[[@{/admin/m/base/node/enable_}]]*/'url',
-        disableUrl : /*[[@{/admin/m/base/node/disable_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : false, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
+    var $ = layui.jquery;
+    var form = layui.form();
+    var enableUrl = /*[[@{/admin/m/base/node/enable_{id}.gsp}]]*/;
+    var disableUrl = /*[[@{/admin/m/base/node/disable_{id}.gsp}]]*/;
+    form.on('switch(filter)', function(data){
+        var id = data.elem.id;
+        if(!$("#" + data.elem.id).prop("checked")){  
+            layer.confirm('您确定要停用吗？', {
+                btn: ['确定','取消'] 
+            }, function(){
+             //停用
+             var url = disableUrl.replace("{id}",data.elem.id);
+             $.post(url,{'id':data.elem.id},function(){    
+                 $("#" + data.elem.id).prop("checked", false);
+                 $("#" + data.elem.id).next().removeClass("layui-form-onswitch");
+             });  
+             layer.msg('停用成功！', {icon: 1});
+             setTimeout(function(){window.location.reload();},1000);
+            }, function(){
+                $("#" + data.elem.id).prop("checked", true);
+                $("#" + data.elem.id).next().addClass("layui-form-onswitch");
+            });
+        }else if($("#" + data.elem.id).prop("checked")){   
+            layer.confirm('您确定要启用吗？', {
+                btn: ['确定','取消'] 
+            }, function(){
+          //启用
+          var url = enableUrl.replace("{id}",data.elem.id);
+          $.post(url,{'id':data.elem.id},function(){
+              $("#" + data.elem.id).prop("checked", true);
+              $("#" + data.elem.id).next().addClass("layui-form-onswitch");
+          });
+          layer.msg('启用成功！', {icon: 1});
+          setTimeout(function(){window.location.reload();},1000);
+          }, function(){
+              $("#" + data.elem.id).prop("checked", false);
+              $("#" + data.elem.id).next().removeClass("layui-form-onswitch");
+          });
+        }    
+    });  
+    
+    var deleteUrl = /*[[@{/admin/m/base/node/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
+    }
     /*]]>*/
 </script>
-<div th:replace="common/common_window::window(windowId=selectTemplateWin)">公共弹出窗口</div>
-</html>
