--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/specialType/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/specialType/edit.html
@@ -1,70 +1,100 @@
-<form th:action="@{/admin/m/base/specialType/edit.gsp}" th:object="${result}" class="form-horizontal" id="editForm" role="form" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">修改专题类型</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<input th:field="*{id}" type="text" hidden="true" />
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 类型名称： </label>
-					<div class="col-md-7">
-						<input th:field="*{typeName}" placeholder="请输入类型名称" type="text" class="form-control" />
-					</div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-用户权限-组织机构维度|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=site,child=specialType)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>站点管理</cite></a> <a th:href="@{/admin/m/base/specialType/list.gsp}">专题分类</a> <a><cite>编辑</cite></a>
+					</span>
 				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">meta关键字：</label>
-					<div class="col-md-7">
-						<input th:field="*{metaKeywords}" placeholder="请输入关键字" type="text" class="form-control" />
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 专题分类
+				</blockquote>
+				<form th:action="@{/admin/m/base/specialType/edit.gsp}" th:object="${result}" class="layui-form" id="editForm" role="form" action="#" method="post">
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>新增专题类型</legend>
+					</fieldset>
+					<input th:field="*{id}" type="text" hidden="true" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">类型名称：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="typeName" th:field="*{typeName}" placeholder="请输入类型名称" lay-verify="typeName" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">meta描述：</label>
-					<div class="col-md-7">
-						<textarea th:field="*{metaDescription}" rows="4" class="form-control" placeholder="最多输入140字"></textarea>
+					<div class="layui-form-item">
+						<label class="layui-form-label">meta关键字：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="metaKeywords" th:field="*{metaKeywords}" placeholder="请输入关键字" lay-verify="metaKeywords" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="101">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-3 control-label"><label class="text-danger">*</label> 排序：</label>
-					<div class="col-xs-7">
-						<input th:field="*{sortOrder}" type="number" min="1" max="99" step="1" value="1" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">meta描述：</label>
+						<div class="layui-input-block">
+							<textarea type="textarea" name="metaDescription" th:field="*{metaDescription}" placeholder="最多输入140字" lay-verify="metaDescription" required autocomplete="off" class="layui-textarea" autofocus="autofocus" maxlength="150"></textarea>
+						</div>
 					</div>
-				</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">排序：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="number" name="sortOrder" th:field="*{sortOrder}" min="1" max="99" step="1" value="1" required class="layui-input" maxlength="31">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit1">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    $(function() {
-        var rules = {
-            typeName : {
-                required : true,
-                maxlength : 20
-            },
-            metaKeywords : {
-                maxlength : 100
-            },
-            sortOrder : {
-                required : true
-            },
-            metaDescription : {
-                maxlength : 140
+    var form = layui.form();
+    //自定义验证规则
+    form.verify({
+        typeName : function(value) {
+            if (value.length <1) {
+                return '类型名称不能为空哦！';
+            } else if (value.length > 20) {
+                return '类型名称不能太长哦，最长20个字！';
+            }
+        },
+        metaKeywords : function(value) {
+            if (value.length < 1) {
+                return 'meta关键字不能为空哦！';
+            } else if (value.length > 100) {
+                return 'meta关键字不能太长哦，最长100个字！';
+            }
+        },
+        sortOrder: function(value) {
+            if (value.length < 1) {
+                return '排序不能小于1！';
+            } else if (value.length >99) {
+                return '排序不能大于99！';
+            }
+        },
+        metaDescription: function(value) {
+           if (value.length > 140) {
+                return 'meta描述不能太长哦，最长140个字！';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'editForm', rules, messages);
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
     });
     /*]]>*/
 </script>
