--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/adSlot/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/adSlot/edit.html
@@ -1,117 +1,150 @@
-<form th:action="@{/admin/m/ext/adSlot/edit.gsp}" th:object="${result}" id="editForm" class="form-horizontal" role="form" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">修改广告信息</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<input th:field="*{id}" type="text" hidden="true" />
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 广告位名称：</label>
-					<div class="col-md-7">
-						<input name="slotName" th:field="*{slotName}" placeholder="请输入广告位名称" type="text" class="form-control" />
-					</div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-用户权限-组织机构维度|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=site,child=adSlot)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>站点管理</cite></a> <a th:href="@{/admin/m/ext/adSlot/list.gsp}">广告位管理</a> <a><cite>编辑</cite></a>
+					</span>
 				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 广告位编码： </label>
-					<div class="col-md-7">
-						<input name="codeNum" th:field="*{codeNum}" placeholder="请输入广告位编码" type="text" class="form-control" />
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 广告位管理
+				</blockquote>
+				<form th:action="@{/admin/m/ext/adSlot/edit.gsp}" th:object="${result}" id="editForm" class="layui-form" role="form" action="#" method="post">
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>编辑广告信息</legend>
+					</fieldset>
+					<input th:field="*{id}" type="text" hidden="true" />
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 广告位名称：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="slotName" th:field="*{slotName}" placeholder="请输入广告位名称" lay-verify="slotName" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 广告位类型： </label>
-					<div class="col-md-7">
-						<select class="form-control" th:field="*{slotType}" name="slotType">
-							<option value="1">图片</option>
-							<option value="2">文字</option>
-							<option value="3">FLASH</option>
-							<option value="4">代码</option>
-						</select>
+					<div class="layui-form-item">
+						<label class="layui-form-label">类型编码：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="codeNum" th:field="*{codeNum}" placeholder="请输入广告位编码" lay-verify="codeNum" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 广告位模板： </label>
-					<div class="col-md-7">
-						<input name="slotTemplate" th:field="*{slotTemplate}" placeholder="请输入广告位模板" type="text" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">广告位类型：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select name="slotType" th:field="*{slotType}">
+								<option value="1">图片</option>
+								<option value="2">文字</option>
+								<option value="3">FLASH</option>
+								<option value="4">代码</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 广告位宽度： </label>
-					<div class="col-md-7">
-						<input name="width" th:field="*{width}" placeholder="请输入广告位宽度" type="text" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 广告位模板：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="slotTemplate" th:field="*{slotTemplate}" placeholder="请输入广告位模板" lay-verify="slotTemplate" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 广告位高度： </label>
-					<div class="col-md-7">
-						<input name="height" th:field="*{height}" placeholder="请输入广告位高度" type="text" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 广告位宽度：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="number" name="width" th:field="*{width}" placeholder="请输入广告位宽度" value="100" min="1" max="2000" lay-verify="width" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-3 control-label"><label class="text-danger">*</label> 排序：</label>
-					<div class="col-xs-7">
-						<input th:field="*{sortOrder}" type="number" min="1" max="99" step="1" value="1" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 广告位高度：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="number" name="height" th:field="*{height}" placeholder="请输入广告位高度" value="100" min="1" max="2000" lay-verify="height" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">广告位描述：</label>
-					<div class="col-md-7">
-						<textarea class="form-control" th:field="*{description}" rows="3" name="description"></textarea>
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 排序：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="number" name="sortOrder" th:field="*{sortOrder}" min="1" max="99" value="1" required autocomplete="off" class="layui-input" autofocus="autofocus">
+						</div>
 					</div>
-				</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">广告位描述 描 述：</label>
+						<div class="layui-input-block">
+							<textarea type="text" name="description" th:field="*{description}" placeholder="最多输入140字" lay-verify="description" autocomplete="off" class="layui-textarea" autofocus="autofocus" maxlength="150"></textarea>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit1">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    $(function() {
-        var rules = {
-            slotName : {
-                required : true,
-                maxlength : 20
-            },
-            codeNum : {
-                required : true,
-                maxlength : 20
-            },
-            slotType : {
-                required : true
-            },
-            slotTemplate : {
-                required : true,
-                maxlength : 20
-            },
-            width : {
-                digits : true,
-                required : true,
-                range : [ 1, 2000 ]
-            },
-            height : {
-                digits : true,
-                required : true,
-                range : [ 1, 2000 ]
-            },
-            sortOrder : {
-                required : true
-            },
-            description : {
-                maxlength : 140
+    var form = layui.form();
+    //自定义验证规则
+    form.verify({
+        slotName : function(value) {
+            if (value.length < 1) {
+                return '广告位名称不能为空哦！';
+            } else if (value.length > 20) {
+                return '广告位名称不能太长哦，最长20个字！';
+            }
+        },
+        codeNum : function(value) {
+            if (value.length < 1) {
+                return '广告位编码不能为空哦！';
+            } else if (value.length > 20) {
+                return '广告位编码不能太长哦，最长20个字！';
+            }
+        },
+        slotTemplate : function(value) {
+            if (value.length < 1) {
+                return '广告位模板不能为空哦！';
+            } else if (value.length > 20) {
+                return '广告位模板不能太长哦，最长20个字！';
+            }
+        },
+        width : function(value) {
+            if (value.length < 1) {
+                return '宽度不能小于1！';
+            } else if (value.length > 2000) {
+                return '宽度不能小于2000！';
+            }
+        },
+        height : function(value) {
+            if (value.length < 1) {
+                return '高度不能小于1！';
+            } else if (value.length > 2000) {
+                return '高度不能小于2000！';
+            }
+        },
+        sortOrder : function(value) {
+            if (value.length < 1) {
+                return '排序不能小于1！';
+            } else if (value.length > 99) {
+                return '排序不能大于99！';
+            }
+        },
+        description : function(value) {
+            if (value.length > 140) {
+                return 'meta描述不能太长哦，最长140个字！';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'editForm', rules, messages);
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
     });
     /*]]>*/
 </script>
