--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/friendlinkType/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/friendlinkType/list.html
@@ -1,114 +1,112 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-图灵谷-站点管理-广告位管理|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-用户权限-组织机构维度|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=site,current=friendlinkType)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=站点管理,current=友情链接类型)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-2">
-								<a th:href="@{/admin/m/ext/friendlinkType/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus-circle"></i>&nbsp;新增</a>
-							</div>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-							<thead>
-								<tr>
-									<th>状态</th>
-									<th>类型名称</th>
-									<th>类型编码</th>
-									<th>描述</th>
-									<th>排序</th>
-									<th width="90" class="text-center">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=site,child=friendlinkType)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>站点管理</cite></a> <a href="#">友情链接类型</a> <a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 友情链接类型
+				</blockquote>
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/m/ext/friendlinkType/add.gsp}" class="layui-btn">新增</a>
+						</div>
+					</div>
+				</blockquote>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th width="40">#</th>
+							<th width="40">状态</th>
+							<th>类型名称</th>
+							<th>类型编码</th>
+							<th>描述</th>
+							<th>排序</th>
+							<th width="90" class="text-center">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${friendlinkTypeList.records == null or friendlinkTypeList.records.size() == 0}">
+							<td colspan="7" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,itemStat:${friendlinkTypeList.records}">
+							<td th:text="${friendlinkTypeList.pageSize*(friendlinkTypeList.page-1)+itemStat.index+1}" style="text-align: center;"></td>
+							<td class="layui-form"><input lay-filter="filter" th:id="${item.id}" lay-skin="switch" type="checkbox" th:attr="checked=${item.enabled ==1}"></td>
+							<td th:text="${item.typeName}" style="text-align: center;"></td>
+							<td th:text="${item.codeNum}" style="text-align: center;"></td>
+							<td th:text="${item.description}" style="text-align: center;"></td>
+							<td th:text="${item.sortOrder}" style="text-align: center;"></td>
+							<td><a th:href="|@{/admin/m/ext/friendlinkType/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/***** 当前页js end *****/-->
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [];
-    var columns = [ {
-        "data" : "enabled",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" checked="checked" onchange="myTable.changeEnabled(this,' + "\'" + row.id + "\'" + ')" /> ';
-            } else if (data !== 1) {
-                return '<input type="checkbox" data-size="mini" data-toggle="toggle" class="js-switch" data-on="启用" data-off="停用" onchange="myTable.changeEnabled(this, ' + "\'" + row.id + "\'" + ')" />';
-            }
-        }
-    }, {
-        "data" : "typeName"
-    }, {
-        "data" : "codeNum"
-    }, {
-        "data" : "description"
-    }, {
-        "data" : "sortOrder"
-    }, {
-        "data" : null,
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var result = '';
-            //修改按钮
-            result += ' <a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/ext/friendlinkType/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/ext/friendlinkType/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/ext/friendlinkType/delete_}]]*/'url',
-        enableUrl : /*[[@{/admin/m/ext/friendlinkType/enable_}]]*/'url',
-        disableUrl : /*[[@{/admin/m/ext/friendlinkType/disable_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        pageable : false, //是否分页
-        showIndexColumn : false, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
+var $ = layui.jquery;
+    var form = layui.form();
+    var enableUrl = /*[[@{/admin/m/ext/friendlinkType/enable_{id}.gsp}]]*/;
+    var disableUrl = /*[[@{/admin/m/ext/friendlinkType/disable_{id}.gsp}]]*/;
+    form.on('switch(filter)', function(data){
+        var id = data.elem.id;
+        if(!$("#" + data.elem.id).prop("checked")){  
+            layer.confirm('您确定要停用吗？', {
+                btn: ['确定','取消'] 
+            }, function(){
+             //停用
+             var url = disableUrl.replace("{id}",data.elem.id);
+             $.post(url,{'id':data.elem.id},function(){    
+                 $("#" + data.elem.id).prop("checked", false);
+                 $("#" + data.elem.id).next().removeClass("layui-form-onswitch");
+             });  
+             layer.msg('停用成功！', {icon: 1});
+             setTimeout(function(){window.location.reload();},1000);
+            }, function(){
+                $("#" + data.elem.id).prop("checked", true);
+                $("#" + data.elem.id).next().addClass("layui-form-onswitch");
+            });
+        }else if($("#" + data.elem.id).prop("checked")){   
+            layer.confirm('您确定要启用吗？', {
+                btn: ['确定','取消'] 
+            }, function(){
+          //启用
+          var url = enableUrl.replace("{id}",data.elem.id);
+          $.post(url,{'id':data.elem.id},function(){
+              $("#" + data.elem.id).prop("checked", true);
+              $("#" + data.elem.id).next().addClass("layui-form-onswitch");
+          });
+          layer.msg('启用成功！', {icon: 1});
+          setTimeout(function(){window.location.reload();},1000);
+          }, function(){
+              $("#" + data.elem.id).prop("checked", false);
+              $("#" + data.elem.id).next().removeClass("layui-form-onswitch");
+          });
+        }    
+    });  
+    
+    var deleteUrl = /*[[@{/admin/m/ext/friendlinkType/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
+    }
     /*]]>*/
 </script>
-</html>
