--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/guestbookType/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/guestbookType/add.html
@@ -1,121 +1,144 @@
-<form th:action="@{/admin/m/ext/guestbookType/add.gsp}" id="addForm" role="form" class="form-horizontal" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">新增留言类型</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 类型名称： </label>
-					<div class="col-md-7">
-						<input name="typeName" placeholder="请输入类型名称" type="text" class="form-control" />
-					</div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-用户权限-组织机构维度|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=site,child=guestbookType)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>站点管理</cite></a> <a th:href="@{/admin/m/ext/guestbookType/list.gsp}">留言板类型</a> <a><cite>新增</cite></a>
+					</span>
 				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 类型编码： </label>
-					<div class="col-md-7">
-						<input name="codeNum" placeholder="请输入类型编码" type="text" class="form-control" />
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 留言板类型
+				</blockquote>
+				<form th:action="@{/admin/m/ext/guestbookType/add.gsp}" id="addForm" role="form" class="layui-form" action="#" method="post">
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>新增留言类型</legend>
+					</fieldset>
+					<div class="layui-form-item">
+						<label class="layui-form-label">类型名称：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="typeName" placeholder="请输入类型名称" lay-verify="typeName" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 开放模式： </label>
-					<div class="col-md-7">
-						<select class="form-control" name="openType">
-							<option value="1">关闭留言</option>
-							<option value="2">开放前台会员</option>
-							<option value="3">前台会员及游客</option>
-						</select>
+					<div class="layui-form-item">
+						<label class="layui-form-label">类型编码：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="codeNum" placeholder="请输入类型编码" lay-verify="codeNum" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 审核模式： </label>
-					<div class="col-md-7">
-						<select class="form-control" name="verifyType">
-							<option value="1">不需要审核</option>
-							<option value="2">游客需要审核</option>
-							<option value="3">游客及前台会员</option>
-							<option value="4">所有人员</option>
-						</select>
+					<div class="layui-form-item">
+						<label class="layui-form-label">开放模式：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select name="openType">
+								<option value="1">关闭留言</option>
+								<option value="2">开放前台会员</option>
+								<option value="3">前台会员及游客</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 验证码模式： </label>
-					<div class="col-md-7">
-						<select class="form-control" name="captchaType">
-							<option value="1">不需要验证码</option>
-							<option value="2">游客需要验证</option>
-							<option value="3">游客及前台会员</option>
-							<option value="4">所有人员</option>
-						</select>
+					<div class="layui-form-item">
+						<label class="layui-form-label">审核模式：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select name="verifyType"> <
+								<option value="1">不需要审核</option>
+								<option value="2">游客需要审核</option>
+								<option value="3">游客及前台会员</option>
+								<option value="4">所有人员</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label"><label class="text-danger">*</label> 最大长度： </label>
-					<div class="col-md-7">
-						<input name="maxLength" value="140" placeholder="请输入最大长度" type="text" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">验证码模式：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select name="captchaType">
+								<option value="1">不需要验证码</option>
+								<option value="2">游客需要验证</option>
+								<option value="3">游客及前台会员</option>
+								<option value="4">所有人员</option>
+							</select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-3 control-label"><label class="text-danger">*</label> 排序：</label>
-					<div class="col-xs-7">
-						<input name="sortOrder" type="number" min="1" max="99" step="1" value="1" class="form-control" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">最大长度：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="number" name="maxLength" value="140" min="1" max="1000" placeholder="请输入最大长度" lay-verify="maxLength" required autocomplete="off" class="layui-input" autofocus="autofocus">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">描 述：</label>
-					<div class="col-md-7">
-						<textarea class="form-control" name="description" placeholder="最多输入140字" rows="3"></textarea>
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 排序：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="number" name="sortOrder" min="1" max="99"  value="1" required autocomplete="off" class="layui-input" autofocus="autofocus">
+						</div>
 					</div>
-				</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label"> 描 述：</label>
+						<div class="layui-input-block">
+							<textarea type="text" name="description" placeholder="最多输入140字" lay-verify="description" autocomplete="off" class="layui-textarea" autofocus="autofocus" maxlength="150"></textarea>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit1">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    $(function() {
-        var rules = {
-            typeName : {
-                required : true,
-                maxlength : 20
-            },
-            codeNum : {
-                required : true,
-                maxlength : 20
-            },
-            openType : {
-                required : true
-            },
-            verifyType : {
-                required : true
-            },
-            captchaType : {
-                required : true
-            },
-            maxLength : {
-                digits : true,
-                range : [ 1, 1000 ]
-            },
-            sortOrder : {
-                required : true
-            },
-            description : {
-                rangelength : [ 0, 140 ]
+    var form = layui.form();
+    //自定义验证规则
+    form.verify({
+        typeName : function(value) {
+            if (value.length < 1) {
+                return '类型名称不能为空哦！';
+            } else if (value.length > 20) {
+                return '类型名称不能太长哦，最长20个字！';
+            }
+        },
+        codeNum : function(value) {
+            if (value.length < 1) {
+                return '类型编码不能为空哦！';
+            } else if (value.length > 20) {
+                return '类型编码不能太长哦，最长20个字！';
+            }
+        },
+        maxLength : function(value) {
+            if (value.length < 1) {
+                return '最大长度不能小于1！';
+            } else if (value.length > 1000) {
+                return '最大长度不能大于1000！';
+            }
+        },
+        sortOrder : function(value) {
+            if (value.length < 1) {
+                return '排序不能小于1！';
+            } else if (value.length > 99) {
+                return '排序不能大于99！';
+            }
+        },
+        description : function(value) {
+            if (value.length > 140) {
+                return 'meta描述不能太长哦，最长140个字！';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'addForm', rules, messages);
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
     });
     /*]]>*/
 </script>
