--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/common/imageUpload.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/common/imageUpload.html
@@ -1,122 +1,124 @@
-<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	<h4 class="modal-title">图片上传</h4>
-</div>
-<div class="modal-body">
-	<div class="panel blank-panel">
-		<div class="panel-heading">
-			<div class="panel-options">
-				<ul class="nav nav-tabs">
-					<li class="active"><a data-toggle="tab" href="#tab-1">单张上传</a></li>
-					<li><a data-toggle="tab" href="#tab-2">多图上传</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="panel-body">
-			<div class="tab-content">
-				<div id="tab-1" class="tab-pane active">
-					<form id="uploadForm" role="form" class="form-horizontal" method="post">
-						<div class="form-group">
-							<label class="col-md-3 control-label"></label>
-							<div class="col-md-9">
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=material,child=image)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>素材管理</cite></a> <a href="#">图片管理</a> <a><cite>图片上传</cite></a>
+					</span>
+				</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 图片管理
+				</blockquote>
+				<div class="layui-tab">
+					<ul class="layui-tab-title">
+						<li class="layui-this">单张上传</li>
+						<li>多张上传</li>
+					</ul>
+					<div class="layui-tab-content">
+						<div class="layui-tab-item layui-show">
+							<div class="layui-form-item layui-form-text">
+								<form action="" class="layui-form" method="post">
+									<div class="layui-form-item">
+										<label class="layui-form-label">选择图片：</label>
+										<div class="layui-input-block">
+											<img id="imgShow" width="164"><br /> <input id="coverImg" type="file" name="file" lay-type="images" class="layui-upload-file">
+										</div>
+									</div>
+									<div class="layui-form-item">
+										<label class="layui-form-label">图片名称：<span style="color: red">*</span></label>
+										<div class="layui-input-block">
+											<input id="title" name="title" placeholder="请输入图片名称" required type="text" class="layui-input" />
+										</div>
+									</div>
+									<div class="layui-form-item">
+										<label class="layui-form-label">图片描述：</label>
+										<div class="layui-input-block">
+											<textarea id="description" name="description" rows="4" class="layui-textarea" placeholder="最大140个字符"></textarea>
+										</div>
+									</div>
+									<div class="layui-form-item">
+										<div class="layui-input-block">
+											<button class="layui-btn" lay-submit="" lay-filter="submit1">开始上传</button>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+						<div class="layui-tab-item">
+							<div class="uploader wu-example">
+								<div class="btns">
+									<div class="picker btn">选择图片</div>
+									<button class="ctlBtn btn btn-primary">开始上传</button>
+								</div>
+								<div class="clearfix"></div>
 								<div class="row">
 									<div class="thelist uploader-list"></div>
 								</div>
-								<div class="btn picker">选择图片</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-md-3 control-label">图片名称：</label>
-							<div class="col-md-7">
-								<input id="title" name="title" placeholder="请输入图片名称" type="text" class="form-control" />
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-md-3 control-label">图片描述：</label>
-							<div class="col-md-7">
-								<textarea id="description" name="description" rows="4" class="form-control" placeholder="最大140个字符"></textarea>
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-md-3 control-label"></label>
-							<div class="col-md-7">
-								<div class="btns">
-									<button type="submit" class="ctlBtn btn btn-primary">开始上传</button>
-								</div>
-							</div>
-						</div>
-					</form>
-				</div>
-				<div id="tab-2" class="tab-pane">
-					<div class="uploader wu-example">
-						<div class="btns">
-							<div class="picker btn">选择图片</div>
-							<button class="ctlBtn btn btn-primary">开始上传</button>
-						</div>
-						<div class="clearfix"></div>
-						<div class="row">
-							<div class="thelist uploader-list"></div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-</div>
-<script th:src="@{/resources/vendor/webuploader/webuploader.js}"></script>
-<script th:src="@{/resources/js/common/imageUpload.js}"></script>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    var accept = {};
-    var fileUploadUrl = /*[[@{/admin/m/base/image/uploadImg}]]*/'';
-    $(function() {
-        // 单张上传
-        var title = "";
-        var description = "";
-        var singUploader = createImageUploader($('#tab-1'), fileUploadUrl, false);
-        singUploader.options.auto = false;
-        // 单张上传传递参数
-        singUploader.on('uploadBeforeSend', function(block, data) {
-            data.title = title;
-            data.description = description;
-        });
-        // 单张上传成功后
-        singUploader.on('uploadSuccess', function(file) {
-            myTable.refresh();
-            tg_alertSuccess();
-            $('#commonWin').modal('hide');
-        });
-        // 单张上传
-        $('#uploadForm').validate({
-            rules : {
-                title : {
-                    maxlength : 40
-                },
-                description : {
-                    maxlength : 140
-                }
+     var showImgUrl = /*[[@{/fore/common/showImage_}]]*/;
+    var form = layui.form();
+    layui.use('upload', function() {
+        url = BASE_URL + 'admin/m/base/image/uploadImg.gsp';
+        tg_upload("coverImg", url);
+    });
+    var $ = layui.jquery;
+    function tg_upload(id, url) {
+        $("#" + id).after('<input id="Input'+id+'" type="text" value="" name="'+id+'" hidden="hidden">');
+        var fileName;
+        //文件上传
+        layui.upload({
+            url : url,//上传接口
+            elem : '#' + id,
+            ext : 'jpg|png|gif', //图片格式限制
+            before : function(input) {
+                layer.msg('文件上传中');
             },
-            messages : {
-
-            },
-            submitHandler : function(f) {
-                if (singUploader.getFiles().length > 0) {
-                    title = $('#title').val();
-                    description = $('#description').val();
-                    singUploader.upload();
-                } else {
-                    layer.alert("请选择上传的图片！");
-                }
+            success : function(res) { //上传成功后的回调
+                $("#" + id).parent().next().text("上传成功");
+                $("#Input" + id).attr("value", res.msg);
+                $("#imgShow").attr("src", showImgUrl+res.msg+'.htm');
             }
         });
-
-        // 多张上传初始化
-        var mulitUploader = createImageUploader($('#tab-2'), fileUploadUrl, true);
-        mulitUploader.on('uploadFinished', function(file) {
-            myTable.refresh();
-            tg_alertSuccess();
-            $('#commonWin').modal('hide');
-        });
+    }
+    var form = layui.form();
+    //自定义验证规则
+    form.verify({
+        title : function(value) {
+            if (value.length < 1) {
+                return '名称不能为空！';
+            } else if (value.length > 40) {
+                return '这名称也太长了，最长40个字哦！';
+            }
+        },
+        description : function(value) {
+           if (value.length > 140) {
+                return '描述不能太长哦，最长140字！';
+            }
+        }
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
     });
     /*]]>*/
 </script>
